docker compose updates

--- a/master-composefiles/jellyfleet/compose.yaml
+++ b/master-composefiles/jellyfleet/compose.yaml
@@ -1,35 +1,17 @@
-## Services:
-
-# Jellyfin 1101
-# Jellyseerr 1102
-
-# Radarr 1103
-# Sonarr 1104
-# Lidarr 1105
-# Readarr 1106
-
-# Prowlarr 1107
-# Autobrr 1108
-
-# Bazarr 1109
-
-# Qbittorrent 1110
-
-version: "3.8"
+version: '3.8'
 name: jellyfleet
 
 include:
-  - ../jellyfin/compose.yaml
-  - ../jellyseerr/compose.yaml
-  - ../radarr/compose.yaml
-  - ../sonarr/compose.yaml
-  - ../lidarr/compose.yaml
-  - ../readarr/compose.yaml
-  - ../prowlarr/compose.yaml
-  - ../autobrr/compose.yaml
-  - ../bazarr/compose.yaml
-  - ../qbittorrent/compose.yaml
-  - ../gluetun/compose.yaml
+  - ../../modular-composefiles/jellyfin/compose.yaml
+  - ../../modular-composefiles/jellyseerr/compose.yaml
+  - ../../modular-composefiles/radarr/compose.yaml
+  - ../../modular-composefiles/sonarr/compose.yaml
+  - ../../modular-composefiles/lidarr/compose.yaml
+  - ../../modular-composefiles/readarr/compose.yaml
+  - ../../modular-composefiles/prowlarr/compose.yaml
+  - ../../modular-composefiles/autobrr/compose.yaml
+  - ../../modular-composefiles/bazarr/compose.yaml
+  - ../../modular-composefiles/qbittorrent/compose.yaml
 
 networks:
   media-network:
