--- a/modular-composefiles/adguard-home/compose.yaml
+++ b/modular-composefiles/adguard-home/compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: adguard-home
     restart: unless-stopped
     ports:
-      # - name: dns
+      # - name: dns-tcp
       - target: 53
         published: 53
         protocol: tcp
@@ -23,19 +23,13 @@ services:
         protocol: tcp
         mode: host
 
-      # - name: dashboard-https
-      - target: 443
-        published: 443
+      # - name: configuration-port
+      - target: 3000
+        published: 3000
         protocol: tcp
         mode: host
 
-      # - name: dns-https
-      - target: 443
-        published: 443
-        protocol: udp
-        mode: host
-
-      # - name: configuration-port
+      # - name: debugging profiles
       - target: 3000
         published: 3000
         protocol: tcp
