--- a/modular-composefiles/adguard-home/compose.yaml
+++ b/modular-composefiles/adguard-home/compose.yaml
@@ -30,8 +30,8 @@ services:
         mode: host
 
       # - name: debugging profiles
-      - target: 3000
-        published: 3000
+      - target: 6060
+        published: 6060
         protocol: tcp
         mode: host
 
@@ -39,7 +39,11 @@ services:
       - type: bind
         source: ${APPDATA_LOCATION:?No appdata directory configured}/adguard/workdir
         target: /opt/adguardhome/work
+        bind:
+          create_host_path: true
 
       - type: bind
         source: ${APPDATA_LOCATION:?No appdata directory configured}/adguard/confdir
         target: /opt/adguardhome/conf
+        bind:
+          create_host_path: true
