Added bind9 dns compose files

--- a/master-composefiles/dns/compose.yaml
+++ b/master-composefiles/dns/compose.yaml
@@ -3,3 +3,5 @@ name: dns-stack
 
 include:
   - ../../modular-composefiles/adguard-home/compose.yaml
+  - ../../modular-composefiles/bind9-authoritative/compose.yaml
+  - ../../modular-composefiles/bind9-recursive/compose.yaml
