--- a/modular-composefiles/bind9-authoritative/compose.yaml
+++ b/modular-composefiles/bind9-authoritative/compose.yaml
@@ -25,8 +25,8 @@ services:
           create_host_path: true
     ports:
       # - name: RNDC
-      - target: ${BIND9_AUTHORITIVE_RNDC_PORT:-953}
+      - target: 953
         host_ip: 127.0.0.1
-        published: 953
+        published: ${BIND9_AUTHORITIVE_RNDC_PORT:-953}
         protocol: tcp
         mode: host
