--- a/modular-composefiles/jellyfin/compose.yaml
+++ b/modular-composefiles/jellyfin/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   jellyfin:
     image: ghcr.io/hotio/jellyfin:release-10.8.13-1
@@ -10,11 +8,9 @@ services:
       - UMASK=002
       - TZ=Europe/Amsterdam
     volumes:
-      - type: bind
-        source: ${APPDATA_LOCATION:?No appdata directory configured}/jellyfin
+      - type: volume
+        source: jellyfin-appdata
         target: /config
-        bind:
-          create_host_path: true
       - type: tmpfs
         target: /cache
       - type: bind
@@ -22,10 +18,12 @@ services:
         target: /data/media
         bind:
           create_host_path: true
-    networks:
-      - media-network
     ports:
-      - target: 8096
+      - name: web-ui
+        target: 8096
         published: 8096
         protocol: tcp
         mode: host
+
+volumes:
+  jellyfin-appdata:
