--- a/modular-composefiles/readarr/compose.yaml
+++ b/modular-composefiles/readarr/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   readarr:
     image: ghcr.io/hotio/readarr:nightly-0.3.19.2437
@@ -10,20 +8,19 @@ services:
       - UMASK=002
       - TZ=Europe/Amsterdam
     volumes:
-      - type: bind
-        source: ${APPDATA_LOCATION:?No appdata directory configured}/readarr
+      - type: volume
+        source: readarr-appdata
         target: /config
-        bind:
-          create_host_path: true
       - type: bind
         source: ${DATA_LOCATION:?No data directory configured}
         target: /data
         bind:
           create_host_path: true
-    networks:
-      - media-network
     ports:
       - target: 8787
         published: 8787
         protocol: tcp
         mode: host
+
+volumes:
+  readarr-appdata:
