--- a/modular-composefiles/autobrr/compose.yaml
+++ b/modular-composefiles/autobrr/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   autobrr:
     image: ghcr.io/autobrr/autobrr:v1.38
@@ -10,15 +8,14 @@ services:
       - UMASK=002
       - TZ=Europe/Amsterdam
     volumes:
-      - type: bind
-        source: ${APPDATA_LOCATION:?No appdata directory configured}/autobrr
+      - type: volume
+        source: autobrr-appdata
         target: /config
-        bind:
-          create_host_path: true
-    networks:
-      - media-network
     ports:
       - target: 7474
         published: 7474
         protocol: tcp
         mode: host
+
+volumes:
+  autobrr-appdata:
