--- a/modular-composefiles/prowlarr/compose.yaml
+++ b/modular-composefiles/prowlarr/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   prowlarr:
     image: ghcr.io/hotio/prowlarr:release-1.13.3.4273
@@ -10,15 +8,14 @@ services:
       - UMASK=002
       - TZ=Europe/Amsterdam
     volumes:
-      - type: bind
-        source: ${APPDATA_LOCATION:?No appdata directory configured}/prowlarr
+      - type: volume
+        source: prowlarr-appdata
         target: /config
-        bind:
-          create_host_path: true
-    networks:
-      - media-network
     ports:
       - target: 9696
         published: 9696
         protocol: tcp
         mode: host
+
+volumes:
+  prowlarr-appdata:
