--- a/modular-composefiles/qbittorrent/compose.yaml
+++ b/modular-composefiles/qbittorrent/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   qbittorrent:
     image: ghcr.io/hotio/qbittorrent:release-4.6.3
@@ -10,20 +8,19 @@ services:
       - UMASK=002
       - TZ=Europe/Amsterdam
     volumes:
-      - type: bind
-        source: ${APPDATA_LOCATION:?No appdata directory configured}/qbittorrent
+      - type: volume
+        source: qbittorrent-appdata
         target: /config
-        bind:
-          create_host_path: true
       - type: bind
         source: ${DATA_LOCATION:?No data directory configured}
         target: /data/torrents
         bind:
           create_host_path: true
-    networks:
-      - media-network
     ports:
       - target: 8080
         published: 8080
         protocol: tcp
         mode: host
+
+volumes:
+  qbittorrent-appdata:
