--- a/modular-composefiles/sonarr/compose.yaml
+++ b/modular-composefiles/sonarr/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   sonarr:
     image: ghcr.io/hotio/sonarr:release-4.0.1.929
@@ -10,20 +8,19 @@ services:
       - UMASK=002
       - TZ=Europe/Amsterdam
     volumes:
-      - type: bind
-        source: ${APPDATA_LOCATION:?No appdata directory configured}/sonarr
+      - type: volume
+        source: sonarr-appdata
         target: /config
-        bind:
-          create_host_path: true
       - type: bind
         source: ${DATA_LOCATION:?No data directory configured}
         target: /data
         bind:
           create_host_path: true
-    networks:
-      - media-network
     ports:
       - target: 8989
         published: 8989
         protocol: tcp
         mode: host
+
+volumes:
+  sonarr-appdata:
