--- a/modular-composefiles/nginx/compose.yaml
+++ b/modular-composefiles/nginx/compose.yaml
@@ -33,6 +33,8 @@ services:
         published: 443
         protocol: tcp
         mode: host
+    networks:
+      - nginx
   
   certbot:
     image: certbot/dns-cloudflare:v2.11.0
@@ -51,6 +53,12 @@ services:
     secrets:
       - source: cloudflare_credentials
         target: apikey
+
+networks:
+  nginx:
+    driver: bridge
+    name: nginx-reverse-proxy
+
 
 secrets:
   cloudflare_credentials:
