Changed to wildcard certificates

--- a/modular-composefiles/traefik/config/traefik.yaml
+++ b/modular-composefiles/traefik/config/traefik.yaml
@@ -36,6 +36,8 @@ entryPoints:
         domains:
           - main: "korver.it"
             sans: "*.korver.it"
+          - main: "xn--krver-jua.it"
+            sans: "*.xn--krver-jua.it"
     http3: {}
 
 providers:
